frontend/src/styles/_home.scss
@import "mediaqueries";

.slide-up {
  transform: translateY(100vh);
  transition: transform 0.0001s ease;
}

.slide-down {
  transform: translateY(0);
  transition: transform 1.5s ease;
}

@keyframes background-image-animation {
  25% {
    opacity: 1;
  }
  85%,
  100% {
    opacity: 0;
    scale: 3;
  }
}

.homepage {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow-x: hidden;
  .home-background {
    overflow-x: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  @include hamburg(1024px){
    @supports (animation-timeline: view()) {
      .home-background {
        transform-origin: bottom;
        animation: background-image-animation linear forwards;
        animation-timeline: view();
        animation-range: exit;
      }
    }
  }

  @include breakpoint(1024px) {
    padding-top: 30vh;
    height: 100vh;
  }

  h1 {
    color: $color1;
    font-size: 3rem;
    max-width: 630px;
    line-height: 65px;
    height: 130px;
    @include breakpoint(768px) {
      height: 70px;
    }
    margin: 170px 20px 0;
    @include breakpoint(1024px) {
      font-size: 2.5rem;
      line-height: 55px;
      margin: 150px 20px 0;
    }
    @include breakpoint(768px) {
      font-size: 2rem;
      line-height: 45px;
      margin: 130px 20px 0;
    }
    @include breakpoint(480px) {
      font-size: 1.5rem;
      line-height: 35px;
      margin: 110px 10px 0;
    }
  }
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 20px;
  margin-top: 30px;

  @include breakpoint(768px) {
    justify-content: center;
  }

  .card {
    position: relative;
    width: calc(25% - 20px); // Adjust width to fit 4 cards per row with spacing
    margin-bottom: 20px;
    overflow: hidden;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease;

    @include breakpoint(1024px) {
      width: calc(
        50% - 20px
      ); // Adjust width to fit 2 cards per row on smaller screens
    }

    @include breakpoint(768px) {
      width: calc(100% - 20px); // Adjust width to fit 1 card per row on mobile
    }

    &:hover {
      transform: scale(1.05);
      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);

      .card-hover {
        opacity: 1;
      }
    }

    img {
      width: 100%;
      height: auto;
      display: block;
    }

    .card-content {
      padding: 15px;
      background: #fff;
      height: 100%;

      h3 {
        margin: 0 0 10px;
        font-size: 1.5rem;
        color: #311973;
      }

      h4 {
        margin: 0;
        font-size: 1.2rem;
        color: #6021ff;
      }
    }

    .card-hover {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: rgba(0, 0, 0, 0.8);
      color: #fff;
      opacity: 0;
      transition: opacity 0.3s ease;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      padding: 20px;
      box-sizing: border-box;

      p {
        margin-bottom: 20px;
        text-align: center;
      }

      button {
        background: gold;
        color: #000;
        border: none;
        padding: 10px 20px;
        cursor: pointer;
        border-radius: 4px;
        transition: background 0.3s ease, transform 0.3s ease;
      }
    }

    &:hover {
      transform: scale(1.05);

      .card-hover {
        opacity: 1;
      }
    }

    &:active {
      background: #ccac00;
      transform: scale(0.9);
    }
  }
}

.value-text {
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
  font-size: 7rem;
  font-weight: bold;
  text-align: center;
  margin-top: 20px;
  height: 50vh;
  color: #ffffff;

  @include breakpoint(768px) {
    font-size: 3rem !important;
    height: 30vh; 
    width: 80%;
    // background-color: #000;
    margin-top: 15px;
  }

  @include breakpoint(480px) {
    font-size: 3.5rem; 
    height: 25vh; 
    width: 70%;
  }
}

.sub-text {
  font-size: 2.5rem;
  font-family: "Cursive", Georgia, "Times New Roman", Times, serif !important;
  text-align: center;
  height: 35vh;
  margin-top: 5px;
  color: #ffffff;
}

.call-to-action {
  display: flex;
  margin-left: 15px;
  @include breakpoint(768px) {
    flex-direction: column;
    margin-right: 15px;
  }
  align-items: center;
  gap: 1rem;
  margin-top: 2rem;
  text-align: center;

  .primary-button {
    padding: 12px 25px;
    background: #311973;
    color: #fff;
    border: none;
    border-radius: 25px;
    font-size: 18px;
    font-weight: bold;
    cursor: pointer;
    transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
    font-family: "Poppins", sans-serif; /* Elegant font */

    &:hover {
      background: #3d2f96;
      transform: translateY(-2px);
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
    }

    &:active {
      background: #3d2f96;
      transform: translateY(0);
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    }

    &:disabled {
      background-color: #e0e0e0;
      color: #b0b0b0;
      cursor: not-allowed;
    }
  }

  .highlight {
    color: #ff6f61;
  }

  .or {
    font-weight: bold;
    font-size: 1.5em;
    color: #fdfdfd;
  }
}
/* ... */

